# bmwe46oil

./: .gitignore  .gitmodules  README.md  privacypolicy.md
app/: .clang-format  CMakeLists.txt  Dashboard.qml  DashboardForm.ui.qml  InfoDialog.qml  MainForm.ui.qml  SerialPort.qml  Store.qml  WiFiInterface.qml  WiFiInterfaceForm.ui.qml  app.pro  app_en_US.ts  config.cpp  config.h  converter.cpp  converter.h  data.cpp  data.h  dataextractor.cpp  dataextractor.h  ds2message.h  ds2parser.cpp  ds2parser.h  ds2request.cpp  ds2request.h  ds2source.h  exception.h  extractors.h  facade.cpp  facade.h  main.cpp  main.qml  model.cpp  model.h  qml.qrc  requester.h  serialinterface.cpp  serialinterface.h  tcpinterface.cpp  tcpinterface.h  (+2 more)
app/+android/: SerialPort.qml  Store.qml
app/android/: AndroidManifest.xml  gradle.properties
app/qml/: main.qml
app/qml/+android/: main.qml
app/qml/actions/: ActionTypes.qml  AppActions.qml
app/qml/stores/: MainStore.qml
app/qml/stores/+android/: MainStore.qml
app/qml/views/: Common.qml  Config.qml  ConfigForm.ui.qml  Dashboard.qml  DashboardForm.ui.qml  Pedal.qml  PedalForm.ui.qml  SerialPort.qml  SerialPortForm.ui.qml  SteeringWheel.qml  SteeringWheelForm.ui.qml  WiFiInterface.qml  WiFiInterfaceForm.ui.qml
app/virtualcontrol/: build.gradle  settings.gradle
app/virtualcontrol/src/main/java/: App.java
app/virtualcontrol/src/test/java/: AppTest.java
scripts/: inpaparsed.csv  ocr-screen.sh  read-oil-values.sh  reads.txt  screenshoter.sh  writes.txt
scripts/angleleft/: angle-left.dmswks  angle-left.txt  data.csv  processed.csv
scripts/angleright/: angle-right.dmswks  angle-right.txt  data.csv  processed.csv
scripts/brakesmall/: brakesmall.hexdump  brakesmall.pcapng  (+2 more)
(+42 files in other folders)
